--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <!-- <script>
         alert(5);
     </script> -->
-    <script src="app.js"></script>
+    <script src="app1.js"></script>
 </body>
 </html> 
