--- a/Login/index.html
+++ b/Login/index.html
@@ -8,6 +8,10 @@
     <title>Momentum App</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <div id="login-form">
+        <input type="text" placeholder="What is your name"/>
+        <button>Log In</button>
+    </div>
+<script src="app.js"></script>
 </body>
 </html>
