--- a/Login/index.html
+++ b/Login/index.html
@@ -8,7 +8,7 @@
     <title>Momentum App</title>
 </head>
 <body>
-    <form id="login-form">
+    <form id="login-form" class="hidden">
         <input
             required
             maxlength="15"
