--- a/Login/index.html
+++ b/Login/index.html
@@ -19,6 +19,7 @@
     <!-- <a href="https://nomadcoders.co">Go to courses</a> -->
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
 </body>
 
 </html>
