--- a/Login/index.html
+++ b/Login/index.html
@@ -27,10 +27,18 @@
         <span></span>
     </div>
     
+    <form id="todo-form">
+        <input type="text" placeholder="Write Your todo and press Enter!" required/>
+    </form>
+    <ul id="todo-list">
+        
+    </ul>
+
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
 </body>
 </html>
