--- a/DemoFile/index.html
+++ b/DemoFile/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Momentum</title>
+    <title id="title">Momentum</title>
 
 </head>
 
@@ -15,10 +15,10 @@
         alert(5);
     </script> -->
     <div class="hello">
-        <h1>Grab me 1!</h1>
+        <h1 id="title" >Grab me 1!</h1>
     </div>
     <div class="hello">
-        <h1>Grab me 2!</h1>
+        <h1 id="title">Grab me 2!</h1>
     </div>
     <div class="hello">
         <h1>Grab me 3!</h1>
@@ -26,8 +26,8 @@
     <div class="hello">
         <h1>Grab me 4!</h1>
     </div>
-    <!-- <script src="app1.js"></script>
-    <script src="app2.js"></script> -->
+    <!-- <script src="app1.js"></script> -->
+    <!-- <script src="app2.js"></script> -->
     <script src="app3.js"></script>
 
 
